--- a/index.html
+++ b/index.html
@@ -4,10 +4,265 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real Estate Management System</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="navbar.css">
- 
+    <style>
+        :root {
+            --primary-color: #3498db;
+            --secondary-color: #2c3e50;
+            --accent-color: #e74c3c;
+            --text-color: #333;
+            --light-text: #ecf0f1;
+            --background-color: #f4f4f4;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: var(--text-color);
+            background-color: var(--background-color);
+        }
+
+        .container {
+            width: 90%;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        /* Header Styles */
+        header {
+            background-color: var(--secondary-color);
+            padding: 1rem 0;
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        /* Carousel Styles */
+        .carousel {
+            position: relative;
+            height: 100vh;
+            overflow: hidden;
+        }
+
+        .carousel-inner {
+            height: 100%;
+        }
+
+        .carousel-item {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            transition: opacity 1s ease-in-out;
+        }
+
+        .carousel-item.active {
+            opacity: 1;
+        }
+
+        .carousel-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .carousel-caption {
+            position: absolute;
+            bottom: 20%;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            color: var(--light-text);
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .carousel-caption h2 {
+            font-size: 2.5rem;
+            margin-bottom: 10px;
+        }
+
+        .carousel-controls button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(255, 255, 255, 0.5);
+            color: var(--text-color);
+            border: none;
+            font-size: 2rem;
+            padding: 10px 15px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .carousel-controls button:hover {
+            background-color: rgba(255, 255, 255, 0.8);
+        }
+
+        .prev {
+            left: 20px;
+        }
+
+        .next {
+            right: 20px;
+        }
+
+        .carousel-indicators {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .indicator {
+            width: 12px;
+            height: 12px;
+            background-color: rgba(255, 255, 255, 0.5);
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .indicator.active {
+            background-color: var(--light-text);
+        }
+
+        /* Footer Styles */
+        .site-footer {
+            background-color: var(--secondary-color);
+            color: var(--light-text);
+            padding: 40px 0;
+        }
+
+        .footer-content {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+
+        .footer-section {
+            flex: 1;
+            margin-right: 20px;
+            margin-bottom: 20px;
+        }
+
+        .footer-section h6 {
+            font-size: 1.2rem;
+            margin-bottom: 15px;
+        }
+
+        .footer-links {
+            list-style: none;
+        }
+
+        .footer-links li {
+            margin-bottom: 10px;
+        }
+
+        .footer-links a {
+            color: var(--light-text);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        .footer-links a:hover {
+            color: var(--primary-color);
+        }
+
+        .social-icons {
+            display: flex;
+            justify-content: flex-start;
+            margin-top: 15px;
+        }
+
+        .social-icons a {
+            display: inline-block;
+            width: 40px;
+            height: 40px;
+            background-color: var(--light-text);
+            border-radius: 50%;
+            text-align: center;
+            line-height: 40px;
+            margin-right: 10px;
+            transition: background-color 0.3s ease;
+        }
+
+        .social-icons a:hover {
+            background-color: var(--primary-color);
+        }
+
+        .social-icons i {
+            color: var(--secondary-color);
+            font-size: 1.2rem;
+        }
+
+        .copyright-text {
+            margin-top: 20px;
+            text-align: center;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            padding-top: 20px;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            .nav-links, .auth-links {
+                display: none;
+            }
+
+            .menu-toggle {
+                display: flex;
+            }
+
+            .menu-toggle.active .bar:nth-child(2) {
+                opacity: 0;
+            }
+
+            .menu-toggle.active .bar:nth-child(1) {
+                transform: translateY(8px) rotate(45deg);
+            }
+
+            .menu-toggle.active .bar:nth-child(3) {
+                transform: translateY(-8px) rotate(-45deg);
+            }
+
+            .nav-links.active, .auth-links.active {
+                display: flex;
+                flex-direction: column;
+                position: absolute;
+                top: 70px;
+                left: 0;
+                width: 100%;
+                background-color: var(--secondary-color);
+                padding: 20px;
+            }
+
+            .nav-links.active li, .auth-links.active a {
+                margin: 10px 0;
+            }
+
+            .footer-content {
+                flex-direction: column;
+            }
+
+            .footer-section {
+                margin-right: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -30,25 +285,21 @@
                 <a href="sign-up.html" class="signup-btn">Sign Up</a>
                 <a href="login.html" class="login-btn">Login</a>
             </div>
-        </nav> 
-        <div class="header-content">
-            <h1>Welcome to Real Estate Management</h1>
-            <p>Your dream property is just one click away!</p>
-        </div>
+        </nav>
     </header>
 
     <main>
         <div id="carousel" class="carousel" aria-live="polite">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="wix-transformed.jpeg" alt="Spacious 3-bedroom home">
+                    <img src="https://images.pexels.com/photos/1396122/pexels-photo-1396122.jpeg" alt="Luxury home">
                     <div class="carousel-caption">
                         <h2>Luxury Living</h2>
                         <p>Discover our premium collection of homes</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://th.bing.com/th/id/R.853d8041205c99b93df1cc8d03268458?rik=QyDnDPZ02Y18IA&pid=ImgRaw&r=0" alt="Modern apartment">
+                    <img src="https://images.pexels.com/photos/323780/pexels-photo-323780.jpeg" alt="Modern apartment">
                     <div class="carousel-caption">
                         <h2>Modern Design</h2>
                         <p>Contemporary living spaces for modern lifestyle</p>
@@ -62,14 +313,44 @@
                     </div>
                 </div>
             </div>
-            <button class="prev" onclick="moveSlide(-1)" aria-label="Previous slide">❮</button>
-            <button class="next" onclick="moveSlide(1)" aria-label="Next slide">❯</button>
+            <div class="carousel-controls">
+                <button class="prev" onclick="moveSlide(-1)" aria-label="Previous slide">❮</button>
+                <button class="next" onclick="moveSlide(1)" aria-label="Next slide">❯</button>
+            </div>
             <div class="carousel-indicators"></div>
-        </div>  
+        </div>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Real Estate Management. All rights reserved.</p>
+    <footer class="site-footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h6>About</h6>
+                    <p>REMS is your trusted partner in finding the perfect property. We offer a wide range of services to help you buy, sell, or rent properties with ease and confidence.</p>
+                </div>
+                <div class="footer-section">
+                    <h6>Quick Links</h6>
+                    <ul class="footer-links">
+                        <li><a href="about.html">About Us</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
+                        <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                        <li><a href="terms-of-service.html">Terms of Service</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h6>Follow Us</h6>
+                    <div class="social-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="copyright-text">
+                <p>&copy; 2024 Real Estate Management System. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
 
     <script>
@@ -107,12 +388,23 @@
                 updateIndicators();
             }
 
-            function moveSlide(direction) {
+            window.moveSlide = function(direction) {
                 showSlide(currentSlide + direction);
             }
 
             // Auto-advance slides
             setInterval(() => moveSlide(1), 5000);
+
+            // Mobile menu toggle
+            const mobileMenu = document.getElementById('mobile-menu');
+            const navLinks = document.querySelector('.nav-links');
+            const authLinks = document.querySelector('.auth-links');
+
+            mobileMenu.addEventListener('click', function() {
+                this.classList.toggle('active');
+                navLinks.classList.toggle('active');
+                authLinks.classList.toggle('active');
+            });
 
             // Add touch support
             let touchStartX = 0;
@@ -132,8 +424,5 @@
             });
         });
     </script>
-
-    <script src="navbar.js" defer></script>
-
 </body>
 </html>
